# edth_hackathon_2025

./: .gitignore  Makefile  README.md  README_GUI.md  REIDENTIFICATION_DEMO.md  build_frontend.py  create_icons.py  main.js  package-lock.json  patch_regenerate_debug.txt  patch_regenerate_message.txt  pyproject.toml  run-standalone-frontend.sh  start_gui.py  start_gui_simple.py  start_realtime_reid.py  style.css  tailwind.config.js  test_setup.py  video_metadata_scrape.py
backend/: pyproject.toml  video_metadata_scrape.py
backend/db_query/: data_visualisation.py
backend/metadata_process/: enhanced_telemetry_parser.py  video_metadata_scrape.py
backend/reidentify/: reidentification.py  robust_reidentification.py
backend/tracking/: add_reidentification.py  compare_detection_modes.py  database_integration.py  demo_reidentification_tracker.py  drone_video_map_viewer.py  generate_session_detections.py  integrated_realtime_tracker.py  kinematic_predictor.py  kinematic_reidentification.py  position_3d_calculator.py  realtime_reidentification_tracker.py  realtime_tracker.py  realtime_video_tracker.py  run_realtime_tracking.py  test_detection_params.py  trackers_in_video.py  trackers_test.py
backend/utils/: download_georeferenced.py  example_kml_download.py  google_earth_guide.md  rosbag_reader_example.py
backend/video_crop/: time_config.json  video_crop.py
data/: ORQA0062_tracking_data.json  README.md  example_time_config.json
frontend/: README.md  index.html  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  types.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs
frontend/src/components/: AnnotatedVideoCanvas.tsx  MiniMap.tsx  OutputSection.tsx  SystemInfo.tsx  TargetDetailsModal.tsx  TargetList.tsx  TrackingSection.tsx  VideoDisplay.tsx  VideoPlayer.tsx  VideoSection.tsx
frontend/src/pages/: Index.tsx
frontend/src/types/: target.ts
notes/: README.md
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
src/components/: VideoSection.tsx
src/tracking/: realtime_tracker.py  realtime_tracker_transformer.py  trackers_test.py  trackers_transformer_test.py
standalone-frontend/: CAMERA_SELECTION.md  DATABASE_GUIDE.md  FEATURES.md  QUICKSTART.md  README.md  REALTIME_GUIDE.md  TOOLTIP_DEMO.md  depth_estimator.py  index.html  package-lock.json  package.json  realtime_server.py  requirements.txt  server.js  server.js.bak  server.js.debug  start-realtime.sh  start.sh  tailwind.config.js  test_realtime_depth.py
standalone-frontend/src/: App.tsx  App.tsx.backup  App.tsx.bak  DroneMapViewer.tsx  DroneStatusDisplay.tsx  DroneVisualization3D.tsx  RealtimeVideoCanvas.tsx  VideoCanvas.tsx  VideoImport.tsx  VideoMapViewer.tsx  index.css  types.ts
workshop_notes/: air_defence_on_a_tactical_level.md  sea_defence.md  working_with_defence.md
