[project]
name = "edth-london-hackathon-2025"
version = "0.1.0"
description = ""
authors = [
    {name = "Lysander Mawby",email = "lysandermawby@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.3,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "opencv-python-headless (>=4.8.0,<4.12.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
