[tool.poetry]
name = "edth-london-hackathon-2025"
version = "0.1.0"
description = ""
authors = ["Lysander Mawby <lysandermawby@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
numpy = ">=2.3.3,<3.0.0"
pandas = ">=2.3.2,<3.0.0"
opencv-python-headless = ">=4.8.0,<4.12.0"
klv = "^0.0.5"
matplotlib = "^3.10.6"
plotly = "^6.3.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
