[tool.poetry]
name = "edth-hackathon-2025"
version = "0.1.0"
description = "EDTH London Hackathon 2025 Project"
authors = ["Lysander Mawby <lysandermawby@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
numpy = ">=2.0.0,<2.3.0"
pandas = ">=2.3.2,<3.0.0"
opencv-python = ">=4.8.0,<4.12.0"
klv = "^0.0.5"
matplotlib = "^3.10.6"
plotly = "^6.3.0"
# Real-time tracking dependencies
supervision = "^0.26.1"
ultralytics = ">=8.0.0"
transformers = ">=4.30.0"
torch = ">=2.0.0"
torchvision = ">=0.15.0"
Pillow = ">=8.0.0"
# trackers = "^2.0.1"  # Commented out due to compatibility issues


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
