[tool.poetry]
name = "edth-hackathon-2025"
version = "0.1.0"
description = "EDTH London Hackathon 2025 Project"
authors = ["Lysander Mawby <lysandermawby@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
numpy = ">=1.24.0,<2.3.0"
pandas = ">=2.3.2,<3.0.0"
klv = "^0.0.5"
matplotlib = "^3.10.6"
plotly = "^6.3.0"
# Real-time tracking dependencies
supervision = ">=0.20.0"
ultralytics = ">=8.0.0"
tqdm = ">=4.65.0"
seaborn = "^0.13.2"
opencv-python = ">=4.8.0,<4.12.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
