[package]
name = "edth-tracker-gui"
version = "0.1.0"
description = "A Tauri GUI for EDTH hackathon object tracking project"
authors = ["Lysander Mawby <lysandermawby@gmail.com>"]
license = ""
repository = ""
default-run = "edth-tracker-gui"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tokio = { version = "1", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
